syntax = "proto3";
import "stat_boost_dto.proto";
import "equipment_item.proto";
import "google/protobuf/any.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message BattleSquadDto {
  int32 battlefield_slot = 1;
  BattleUnitDto hero = 2;
  BattleUnitDto unit = 3;
}

message BattleUnitDto {
  BattleUnitPropertiesDto properties = 1;
  BattleUnitStateDto unit_state = 2;
}

message BattleUnitPropertiesDto {
  string unit_id = 1;
  int32 level = 2;
  int32 ascension_level = 3;
  repeated string abilities = 4;
  map<string, float> unit_stats_overrides = 5;
  repeated StatBoostDto stat_boosts = 6;
  google.protobuf.Any equipment = 7;
  int32 ability_level = 9;
  int32 awakening_level = 10;
}

message BattleUnitStateDto {
  int32 in_battle_id = 1;
  map<string, float> unit_stats = 2;
}

message AllEquipmentUnitDataDTO {
  repeated SquadEquipmentItemDto items = 1;
}

message SquadEquipmentItemDto {
  string equipmentSlotTypeDefinitionId = 1;
  string equipmentSetDefinitionId = 2;
  string equipmentRarityDefinitionId = 3;
  int32 level = 4;
  EquipmentAttributeDto mainAttribute = 5;
  repeated EquipmentAttributeDto subAttributes = 6;
}
