syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message BuildingBuffDetailsDto {
  int32 value = 1;
  double factor = 2;
  repeated BuildingBuffResourceDto resources = 3;
}

message BuildingBuffResourceDto {
  string resource_type = 1;
  double factor = 2;
}
