syntax = "proto3";
import "city_init_definition_dto.proto";
import "google/protobuf/any.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message CityDefinitionDTO {
  string id = 1;
  // CityCultureAreaComponentDTO, GameDesignReference
  repeated google.protobuf.Any packed_components = 2;
  CityInitDefinitionDTO init_definition = 3;
  repeated string building_menu_types = 4;
}
