syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message LinkedExpansionComponentDTO {
  string linked_expansion_id = 1;
}
