syntax = "proto3";

import "google/protobuf/any.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message ReworkedWonderDefinitionDTO {
  string id = 1;
  string city_id = 2;
  // WonderLevelUpComponentDTO
  repeated google.protobuf.Any packed_levels = 6;
}
