syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message LevelUpComponentDTO {
  bytes star_levels = 6;
}
