syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message HeroProgressionComponentDTO {
  string id = 1;
  string cost_id = 2;
  string ascension_cost_id = 3;
}
