syntax = "proto3";

import "google/protobuf/any.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message RegionDefinitionDTO {
  string region = 1;
  repeated string encounters = 2;
  map<string, RegionRewardDto> rewards = 3;
  string continent = 5;
}

message RegionRewardDto {
  RegionRewardSet reward_set = 1;
}
message RegionRewardSet {
  // IncreaseExpansionRightRewardDTO, ResourceRewardDTO, 
  repeated google.protobuf.Any packed_rewards = 2;
}
    