syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message WorldDefinitionDTO {
  string world = 1;
  int32 index = 2;
  repeated string continents = 3;
  string world_type = 4;
}