syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message ResourceDefinitionDTO {
  string id = 1;
  string type = 3;
  string age = 4;
  string city = 5;
  int32 u6 = 6;
}
