syntax = "proto3";
import "id_dto.proto";

import "google/protobuf/any.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message MysteryChestRewardDTO {
  IdDto id = 1;
  // ResourceRewardDTO, HeroRewardDTO, RewardDefinitionDTO, DynamicActionChangeRewardDTO
  repeated google.protobuf.Any packed_rewards = 2;
  bytes reward_probabilities = 3;
}
